# ai-v2

./: .dockerignore  .env  .env.example  .env.replit  .gitattributes  .gitignore  .netlifyignore  .replit  Dockerfile  Dockerfile.minimal  Procfile  README.md  README_APRIL_9.md  README_BACKEND.md  README_FIX_ISSUES.md  README_REFACTORED.md  REPLIT_README.md  SUMMARY.md  SUPABASE_FIX_README.md  add_search_to_history.py  alternative_fix_without_deleting.sql  app.py  app_fastapi.py  app_minimal.py  basic_run.py  build.sh  commit_message.txt  coresignal-enrichment-webhook.js  create_branch.sh  create_rpc_function.sql  create_rpc_function_v2.sql  database.py  db_test.py  deploy-minimal.sh  deploy-to-fly.sh  deploy-to-render.sh  deploy.sh  dev_backend.sh  dev_frontend.sh  direct_db.py  (+64 more)
NEWAPI/: config.py  main.py
NEWAPI/routers/: generate_research.py  partner_research.py  potential_partners.py  seed_data.py  top_partners.py
api/: index.py
app/: __init__.py
app/models/: database.py
app/routes/: api.py  generate_research.py  partner_research.py  (+4 more)
deployment/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  setup_repo.sh
dura-react/: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  test-api.js  vite.config.js
fastapi_app/: .dockerignore  .env.example  CONVERSION_NOTES.md  DEPLOY_TO_FLY.md  Dockerfile  NEON_DB_SETUP.md  README.md  database.py  deploy.sh  fly.toml  migrate.py  requirements.txt  run.py
fastapi_swagger/: requirements.txt  run.py
public/: index.html
routers/: search.py
templates/: index.html
(+218 files in other folders)
