[tool.poetry]
name = "mlseai-search"
version = "0.1.0"
description = "MLSE AI Search Application"
authors = ["Ed Duran <123636289+Thedurancode@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
python-dotenv = "1.0.0"
requests = "2.31.0"
flask-cors = "3.0.10"
gunicorn = "21.2.0"
openai = "1.12.0"
exa-py = "1.0.1"
supabase = "^0.7.1"
gotrue = "^0.5.0"
postgrest = "^0.10.6"
realtime = "^0.1.0"
storage3 = "^0.5.2"
reportlab = "4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
